@@ -620,6 +620,8 @@ Release 2.0.3-alpha - 2013-02-06
 
     HDFS-4053. Increase the default block size. (eli)
 
+    HDFS-3131. Improve TestStorageRestore. (Brandon Li via atm)
+
   OPTIMIZATIONS
 
     HDFS-3429. DataNode reads checksums even if client does not need them (todd)
